distinct navbar for screen widths

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,25 @@
         <div class="btn-toggle-nav__bar btn-toggle-nav__bar--bottom"></div>
       </div>
     </header>
-    <nav class="nav">
+    <nav class="nav nav--small-width js-small-width-nav">
+      <a href="#section-intro" class="nav__link">
+        <span class="nav__link-label js-link-label">Intro</span>
+      </a>
+      <a href="#section-about" class="nav__link">
+        <span class="nav__link-label js-link-label">About</span>
+      </a>
+      <a href="#section-skills" class="nav__link">
+        <span class="nav__link-label js-link-label">Skills</span>
+      </a>
+      <a href="#section-projects" class="nav__link">
+        <span class="nav__link-label js-link-label">Projects</span>
+      </a>
+      <a href="#section-connect" class="nav__link">
+        <span class="nav__link-label js-link-label">Connect</span>
+      </a>
+    </nav>
+
+    <nav class="nav nav--large-width">
       <a href="#section-intro" class="nav__link">
         <span class="nav__link-indicator"></span>
         <span class="nav__link-number">01</span>
