added full page sections

--- a/src/index.html
+++ b/src/index.html
@@ -57,5 +57,13 @@
         <span class="nav__link-label">Connect</span>
       </a>
     </nav>
+
+    <div class="full-page">
+      <section id="section-intro" class="full-page__section"></section>
+      <section id="section-about" class="full-page__section"></section>
+      <section id="section-skills" class="full-page__section"></section>
+      <section id="section-projects" class="full-page__section"></section>
+      <section id="section-connect" class="full-page__section"></section>
+    </div>
   </body>
 </html>
