added full page sections

--- a/src/index.html
+++ b/src/index.html
@@ -30,40 +30,65 @@
       </a>
     </nav>
 
-    <nav class="nav nav--large-width">
-      <a href="#section-intro" class="nav__link">
-        <span class="nav__link-indicator"></span>
-        <span class="nav__link-number">01</span>
-        <span class="nav__link-label">Intro</span>
+    <nav class="nav nav--large-width js-large-width-navbar">
+      <a href="#section-intro" class="nav__link js-nav-link">
+        <span class="nav__link-indicator js-nav-link-indicator"></span>
+        <span class="nav__link-number js-nav-link-number">01</span>
+        <span class="nav__link-label js-nav-link-label" data-label="Intro"
+          >Intro</span
+        >
       </a>
-      <a href="#section-about" class="nav__link">
-        <span class="nav__link-indicator"></span>
-        <span class="nav__link-number">02</span>
-        <span class="nav__link-label">About</span>
+      <a href="#section-about" class="nav__link js-nav-link">
+        <span class="nav__link-indicator js-nav-link-indicator"></span>
+        <span class="nav__link-number js-nav-link-number">02</span>
+        <span class="nav__link-label js-nav-link-label" data-label="About"
+          >About</span
+        >
       </a>
-      <a href="#section-skills" class="nav__link">
-        <span class="nav__link-indicator"></span>
-        <span class="nav__link-number">03</span>
-        <span class="nav__link-label">Skills</span>
+      <a href="#section-skills" class="nav__link js-nav-link">
+        <span class="nav__link-indicator js-nav-link-indicator"></span>
+        <span class="nav__link-number js-nav-link-number">03</span>
+        <span class="nav__link-label js-nav-link-label" data-label="Skills"
+          >Skills</span
+        >
       </a>
-      <a href="#section-projects" class="nav__link">
-        <span class="nav__link-indicator"></span>
-        <span class="nav__link-number">04</span>
-        <span class="nav__link-label">Projects</span>
+      <a href="#section-projects" class="nav__link js-nav-link">
+        <span class="nav__link-indicator js-nav-link-indicator"></span>
+        <span class="nav__link-number js-nav-link-number">04</span>
+        <span class="nav__link-label js-nav-link-label" data-label="Projects"
+          >Projects</span
+        >
       </a>
-      <a href="#section-connect" class="nav__link">
-        <span class="nav__link-indicator"></span>
-        <span class="nav__link-number">05</span>
-        <span class="nav__link-label">Connect</span>
+      <a href="#section-connect" class="nav__link js-nav-link">
+        <span class="nav__link-indicator js-nav-link-indicator"></span>
+        <span class="nav__link-number js-nav-link-number">05</span>
+        <span class="nav__link-label js-nav-link-label" data-label="Connect"
+          >Connect</span
+        >
       </a>
     </nav>
 
-    <div class="full-page">
-      <section id="section-intro" class="full-page__section"></section>
-      <section id="section-about" class="full-page__section"></section>
-      <section id="section-skills" class="full-page__section"></section>
-      <section id="section-projects" class="full-page__section"></section>
-      <section id="section-connect" class="full-page__section"></section>
+    <div class="full-page js-full-page">
+      <section
+        id="section-intro"
+        class="full-page__section js-full-page-section"
+      ></section>
+      <section
+        id="section-about"
+        class="full-page__section js-full-page-section"
+      ></section>
+      <section
+        id="section-skills"
+        class="full-page__section js-full-page-section"
+      ></section>
+      <section
+        id="section-projects"
+        class="full-page__section js-full-page-section"
+      ></section>
+      <section
+        id="section-connect"
+        class="full-page__section js-full-page-section"
+      ></section>
     </div>
   </body>
 </html>
