use data-label attr for intended text in element

--- a/src/index.html
+++ b/src/index.html
@@ -14,19 +14,29 @@
     </header>
     <nav class="nav nav--small-width js-small-width-nav">
       <a href="#section-intro" class="nav__link">
-        <span class="nav__link-label js-link-label">Intro</span>
+        <span class="nav__link-label js-link-label" data-label="Intro"
+          >Intro</span
+        >
       </a>
       <a href="#section-about" class="nav__link">
-        <span class="nav__link-label js-link-label">About</span>
+        <span class="nav__link-label js-link-label" data-label="About"
+          >About</span
+        >
       </a>
       <a href="#section-skills" class="nav__link">
-        <span class="nav__link-label js-link-label">Skills</span>
+        <span class="nav__link-label js-link-label" data-label="Skills"
+          >Skills</span
+        >
       </a>
       <a href="#section-projects" class="nav__link">
-        <span class="nav__link-label js-link-label">Projects</span>
+        <span class="nav__link-label js-link-label" data-label="Projects"
+          >Projects</span
+        >
       </a>
       <a href="#section-connect" class="nav__link">
-        <span class="nav__link-label js-link-label">Connect</span>
+        <span class="nav__link-label js-link-label" data-label="Connect"
+          >Connect</span
+        >
       </a>
     </nav>
 
@@ -34,37 +44,42 @@
       <a href="#section-intro" class="nav__link js-nav-link">
         <span class="nav__link-indicator js-nav-link-indicator"></span>
         <span class="nav__link-number js-nav-link-number">01</span>
-        <span class="nav__link-label js-nav-link-label" data-label="Intro"
-          >Intro</span
-        >
+        <span
+          class="nav__link-label js-nav-link-label"
+          data-label="Intro"
+        ></span>
       </a>
       <a href="#section-about" class="nav__link js-nav-link">
         <span class="nav__link-indicator js-nav-link-indicator"></span>
         <span class="nav__link-number js-nav-link-number">02</span>
-        <span class="nav__link-label js-nav-link-label" data-label="About"
-          >About</span
-        >
+        <span
+          class="nav__link-label js-nav-link-label"
+          data-label="About"
+        ></span>
       </a>
       <a href="#section-skills" class="nav__link js-nav-link">
         <span class="nav__link-indicator js-nav-link-indicator"></span>
         <span class="nav__link-number js-nav-link-number">03</span>
-        <span class="nav__link-label js-nav-link-label" data-label="Skills"
-          >Skills</span
-        >
+        <span
+          class="nav__link-label js-nav-link-label"
+          data-label="Skills"
+        ></span>
       </a>
       <a href="#section-projects" class="nav__link js-nav-link">
         <span class="nav__link-indicator js-nav-link-indicator"></span>
         <span class="nav__link-number js-nav-link-number">04</span>
-        <span class="nav__link-label js-nav-link-label" data-label="Projects"
-          >Projects</span
-        >
+        <span
+          class="nav__link-label js-nav-link-label"
+          data-label="Projects"
+        ></span>
       </a>
       <a href="#section-connect" class="nav__link js-nav-link">
         <span class="nav__link-indicator js-nav-link-indicator"></span>
         <span class="nav__link-number js-nav-link-number">05</span>
-        <span class="nav__link-label js-nav-link-label" data-label="Connect"
-          >Connect</span
-        >
+        <span
+          class="nav__link-label js-nav-link-label"
+          data-label="Connect"
+        ></span>
       </a>
     </nav>
 
