--- a/src/index.html
+++ b/src/index.html
@@ -86,8 +86,99 @@
     <div class="full-page js-full-page">
       <section
         id="section-intro"
-        class="full-page__section js-full-page-section"
-      ></section>
+        class="full-page__section full-page__section--intro js-full-page-section"
+      >
+        <svg class="logo" width="500" height="500" viewBox="0 0 500 500">
+          <path
+            class="logo__fragment js-logo-fragment-first"
+            fill="#ea5455"
+            stroke="#ea5455"
+            stroke-width="6"
+            stroke-dasharray="700"
+            d="M248.43 150.45 L249.63 149.05 L263.13 220.7 L124.63 380.75 L46.5 380.75Z"
+          />
+
+          <path
+            class="logo__fragment js-logo-fragment-second"
+            fill="#e5e5e5"
+            stroke="#e5e5e5"
+            stroke-width="6"
+            stroke-dasharray="700"
+            d="M263.08 353.73 L262.08 354.83 L248.57 283.17 L387.08 123.13 L465.2 123.13Z"
+          />
+
+          <g
+            class="logo__strokes-g js-strokes-g-first"
+            stroke="#ea5455"
+            stroke-width="0.5"
+          >
+            <line
+              class="js-stroke-1"
+              x1="249.63"
+              y1="149.05"
+              x2="46.5"
+              y2="380.75"
+            />
+            <line
+              class="js-stroke-2"
+              x1="46.5"
+              y1="380.75"
+              x2="124.63"
+              y2="380.75"
+            />
+            <line
+              class="js-stroke-3"
+              x1="124.63"
+              y1="380.75"
+              x2="263.13"
+              y2="220.7"
+            />
+            <line
+              class="js-stroke-4"
+              x1="263.13"
+              y1="220.7"
+              x2="249.63"
+              y2="149.05"
+            />
+          </g>
+
+          <g
+            class="logo__strokes-g js-strokes-g-second"
+            stroke="#ea5455"
+            stroke-width="0.5"
+          >
+            <line
+              class="js-stroke-1"
+              x1="262.08"
+              y1="354.83"
+              x2="465.2"
+              y2="123.13"
+            />
+            <line
+              class="js-stroke-2"
+              x1="465.2"
+              y1="123.13"
+              x2="387.08"
+              y2="123.13"
+            />
+            <line
+              class="js-stroke-3"
+              x1="387.08"
+              y1="123.13"
+              x2="248.57"
+              y2="283.17"
+            />
+            <line
+              class="js-stroke-4"
+              x1="248.57"
+              y1="283.17"
+              x2="262.08"
+              y2="354.83"
+            />
+          </g>
+        </svg>
+      </section>
+
       <section
         id="section-about"
         class="full-page__section js-full-page-section"
