added animated low poly portrait

--- a/src/index.html
+++ b/src/index.html
@@ -248,6 +248,8 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </div>
+
+        <svg class="low-poly-pic js-low-poly-pic" viewBox="0 0 256 256"></svg>
       </section>
 
       <section
