added skills section

--- a/src/index.html
+++ b/src/index.html
@@ -255,7 +255,20 @@
       <section
         id="section-skills"
         class="full-page__section full-page__section--skills js-full-page-section"
-      ></section>
+      >
+        <div class="text-appear text-appear--text-skills js-text-skills">
+          <div class="text-appear__line-top js-line-top"></div>
+          <div class="text-appear__text js-text">I can do a thing or two.</div>
+          <div class="text-appear__line-bottom js-line-bottom"></div>
+        </div>
+
+        <!-- <div class="text-about-para">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </div> -->
+        <div class="wrapper-skills"></div>
+      </section>
+
       <section
         id="section-projects"
         class="full-page__section js-full-page-section"
