added skills section items

--- a/src/index.html
+++ b/src/index.html
@@ -266,7 +266,94 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </div> -->
-        <div class="wrapper-skills"></div>
+        <div class="skills">
+          <div class="skills__skill-description">
+            <div class="skills__skill-names">
+              <div class="skills__skill-name skills__skill-name--web">WEB</div>
+              <div class="skills__skill-name skills__skill-name--android">
+                ANDROID
+              </div>
+              <div class="skills__skill-name skills__skill-name--ml">ML</div>
+              <div class="skills__skill-name skills__skill-name--blockchain">
+                BLOCKCHAIN
+              </div>
+            </div>
+            <div class="skills__skill-texts js-slider-skill-texts">
+              <div
+                class="skills__skill-text skills__skill-text--web js-slider-item"
+              >
+                Web Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </div>
+              <div
+                class="skills__skill-text skills__skill-text--android js-slider-item"
+              >
+                Android Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua.
+              </div>
+              <div
+                class="skills__skill-text skills__skill-text--ml js-slider-item"
+              >
+                ML Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </div>
+              <div
+                class="skills__skill-text skills__skill-text--blockchain js-slider-item"
+              >
+                Blockchain Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua.
+              </div>
+            </div>
+          </div>
+          <div class="skills__tools">
+            <div class="skills__tools-label">Tools</div>
+            <div class="skills__tools-containers js-slider-skill-tools">
+              <div
+                class="skills__tools-container skills__tools-container--web js-slider-item"
+              >
+                <!-- <span class="skills__tool-item"></span>
+                <span class="skills__tool-item"></span>
+                <span class="skills__tool-item"></span> -->
+                <div class="skills__tools-row"></div>
+                <div class="skills__tools-row"></div>
+                <div class="skills__tools-row"></div>
+                <div class="skills__tools-row"></div>
+              </div>
+              <div
+                class="skills__tools-container skills__tools-container--android js-slider-item"
+              >
+                <div class="skills__tools-row"></div>
+                <div class="skills__tools-row"></div>
+                <div class="skills__tools-row"></div>
+                <div class="skills__tools-row"></div>
+              </div>
+              <div
+                class="skills__tools-container skills__tools-container--ml js-slider-item"
+              >
+                <div class="skills__tools-row"></div>
+                <div class="skills__tools-row"></div>
+                <div class="skills__tools-row"></div>
+                <div class="skills__tools-row"></div>
+              </div>
+              <div
+                class="skills__tools-container skills__tools-container--blockchain js-slider-item"
+              >
+                <div class="skills__tools-row"></div>
+                <div class="skills__tools-row"></div>
+                <div class="skills__tools-row"></div>
+                <div class="skills__tools-row"></div>
+              </div>
+            </div>
+          </div>
+          <div class="skills__nav-btn-container js-slider-controls">
+            <span class="skills__nav-btn"></span>
+            <span class="skills__nav-btn"></span>
+            <span class="skills__nav-btn"></span>
+            <span class="skills__nav-btn"></span>
+          </div>
+        </div>
       </section>
 
       <section
